# python_design_example

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
api_modules/: __init__.py
example_compliance_engine/: main.py
example_compliance_engine/compliance_engine/: __init__.py  chain_builder.py  chain_handler.py  evaluate_compliance.py
example_compliance_engine/compliance_engine/validations/: __init__.py  it_contact_handler.py  password_handler.py  username_handler.py  vulnerability_critical.py  vulnerability_high.py  vulnerability_low.py
solid-principles-python-main/src/payment_service/notifiers/: notifier.py
solid-principles-python-main/src/payment_service/validators/: customer_handler.py
validator/: chain_builder.py  chain_handler.py  compliance_handler.py  main.py
