[tool.poetry]
name = "python-design-example"
version = "0.1.0"
description = ""
authors = ["dacerbo <david.acerbo@mercadolibre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-restx = "^1.3.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
